--- a/package.json
+++ b/package.json
@@ -2,11 +2,25 @@
   "name": "nexteraestate",
   "version": "1.0.0",
   "type": "module",
+  "license": "MIT",
   "scripts": {
-    "build": "cd client && npm install && npm run build",
-    "start": "cd client && npm run preview"
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "dev:client": "cd client && npm run dev",
+    "dev:server": "cd server && npm run dev",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "cd client && npm install && npm run build",
+    "build:server": "cd server && npm install && npm run build",
+    "start": "cd server && npm start",
+    "install:all": "npm install && cd client && npm install && cd ../server && npm install"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   },
   "engines": {
-    "node": "18.x"
-  }
+    "node": ">=18.0.0"
+  },
+  "workspaces": [
+    "client",
+    "server"
+  ]
 }
