--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/node": "^20.14.3", // Added for path resolution
+    "@types/node": "^20.14.3",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
@@ -54,7 +54,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.6.3",
     "vite": "^5.4.19",
-    "vite-tsconfig-paths": "^5.0.5" // Added for path resolution
+    "vite-tsconfig-paths": "^5.0.5"
   },
   "engines": {
     "node": ">=18.0.0"
