--- a/package.json
+++ b/package.json
@@ -6,57 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "debug": "bash debug.sh",
+    "debug": "echo '=== PATH DEBUGGING ===' && echo 'Project root: $(pwd)' && echo 'Node version: $(node -v)' && echo 'NPM version: $(npm -v)' && echo '' && echo 'Listing client/src/components:' && ls -la client/src/components | grep -i errorboundary && echo '' && echo 'Checking file existence:' && [ -f \"client/src/components/ErrorBoundary.tsx\" ] && echo 'ErrorBoundary.tsx FOUND' || echo 'ErrorBoundary.tsx MISSING' && echo '' && echo 'Running build...' && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.10.0",
-    "@radix-ui/react-accordion": "^1.2.4",
-    "@radix-ui/react-alert-dialog": "^1.1.4",
-    "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-checkbox": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-popover": "^1.1.4",
-    "@radix-ui/react-progress": "^1.1.1",
-    "@radix-ui/react-select": "^2.1.4",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.1",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.4",
-    "@radix-ui/react-tooltip": "^1.1.4",
-    "@tanstack/react-query": "^5.60.5",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.453.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.54.0",
-    "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7",
-    "wouter": "^3.3.5",
-    "zod": "^3.24.2"
+    // ... keep all your dependencies unchanged ...
   },
   "devDependencies": {
-    "@types/node": "^20.14.3",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.1",
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
-    "@typescript-eslint/parser": "^7.0.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.5.0",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.19",
-    "vite-tsconfig-paths": "^5.0.5"
+    // ... keep all your devDependencies unchanged ...
   },
   "engines": {
     "node": ">=18.0.0"
